--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.13.7",
     "@mui/joy": "^5.0.0-alpha.85",
-    "@mui/lab": "^5.0.0-alpha.134",
+    "@mui/lab": "^5.0.0-alpha.135",
     "@mui/material": "^5.13.7",
+    "@mui/x-date-pickers": "^6.9.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "dayjs": "^1.11.9",
     "formik": "^2.4.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
