--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "formik": "^2.4.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
+    "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.1.1",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
